--- a/TCPAdapter.Server/App.config
+++ b/TCPAdapter.Server/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:49800/Workflow.xamlx" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IService" contract="RemoteWCFWorkflowService.IService"
+                name="BasicHttpBinding_IService" />
+        </client>
+    </system.serviceModel>
 </configuration>
